--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a {
 }
 
 
-.content-wrapper .calender-box {
+.content-wrapper .calendar-box {
     width: 100%;
     height: 100%;
     border: 1px solid black;
@@ -78,7 +78,7 @@ a {
 
 }
 
-.content-wrapper .calender-box .date {
+.content-wrapper .calendar-box .date {
     width: 100%;
     height: 100%;
     border: 1px solid rgb(0, 0, 0);
@@ -88,7 +88,7 @@ a {
     color: rgb(206, 132, 22)
 }
 
-.content-wrapper .calender-box textarea {
+.content-wrapper .calendar-box textarea {
     width: 100%;
     height: 100%;
     resize: none;
